chat: add simple template

--- a/src/app/chat/components/publish-message/publish-message.component.html
+++ b/src/app/chat/components/publish-message/publish-message.component.html
@@ -1,2 +1,2 @@
-<textarea pInputTextArea></textarea>
+<textarea pInputTextarea autoResize="autoResize"></textarea>
 <button pButton icon="pi pi-envelope"></button>
