chore: allow usage og hotkeys

--- a/src/app/chat/components/publish-message/publish-message.component.html
+++ b/src/app/chat/components/publish-message/publish-message.component.html
@@ -1,2 +1,8 @@
-<textarea pInputTextarea autoResize="autoResize"></textarea>
-<button pButton icon="pi pi-envelope"></button>
+<textarea
+  [formControl]="messageField"
+  pInputTextarea
+  autoResize="autoResize"></textarea>
+<button
+  pButton
+  (click)="emitMessage(emitMessage)"
+  icon="pi pi-envelope"></button>
