chat: define API for message

--- a/src/app/chat/components/message-card/message-card.component.html
+++ b/src/app/chat/components/message-card/message-card.component.html
@@ -1,3 +1,5 @@
-<p>
-  message-card works!
-</p>
+<p-card
+  [header]="message.sender.name"
+  [subheader]="message.writtenAt | date:'dd. MMMM HH:mm'">
+  {{ message.text }}
+</p-card>
