chat: align message type to API

--- a/src/app/chat/components/message-card/message-card.component.html
+++ b/src/app/chat/components/message-card/message-card.component.html
@@ -1,5 +1,5 @@
 <p-card
-  [header]="message.sender.name"
+  [header]="message.writtenBy"
   [subheader]="message.writtenAt | date:'dd. MMMM HH:mm'">
   {{ message.text }}
 </p-card>
