--- a/src/app/chat/containers/chat-room/chat-room.component.html
+++ b/src/app/chat/containers/chat-room/chat-room.component.html
@@ -1,4 +1,4 @@
 <div class="messages">
   <eb-message-card></eb-message-card>
 </div>
-<eb-publish-message></eb-publish-message>
+<eb-publish-message (send)="publishMessage($event)"></eb-publish-message>
