feat(chat): prevent sending messages having no content

--- a/src/app/chat/containers/chat-room/chat-room.component.html
+++ b/src/app/chat/containers/chat-room/chat-room.component.html
@@ -5,4 +5,6 @@
     [message]="message"
     *ngFor="let message of messages$ | async"></eb-message-card>
 </div>
-<eb-publish-message (send)="publishMessage($event)"></eb-publish-message>
+<div class="send-message">
+  <eb-publish-message (send)="publishMessage($event)"></eb-publish-message>
+</div>
