--- a/src/app/chat/containers/chat-room/chat-room.component.scss
+++ b/src/app/chat/containers/chat-room/chat-room.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 87%;
+  height: 90%;
 
   .messages {
     overflow: scroll;
@@ -9,7 +9,8 @@
     flex: 1 1 auto;
   }
 
-  eb-publish-messages {
-    flex: 0 1 80px;
+  .send-message {
+    padding: 16px;
+    background-color: rgb(255, 174, 0);
   }
 }
