feat(chat): disable clear button if no messages found

--- a/src/app/chat/components/clear-history/clear-history.component.html
+++ b/src/app/chat/components/clear-history/clear-history.component.html
@@ -1,5 +1,6 @@
 <button
   pButton
+  [disabled]="isNothingToClear"
   icon="pi pi-trash"
   (click)="clear.emit()"
   class="ui-button-danger"></button>
