chat: adjust layout

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,10 @@
 :host {
   display: block;
   height: 100%;
+
+  h1 {
+    padding-left: 16px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
