chat: display loading spinner if message has been sent

--- a/src/app/chat/containers/chat-room/chat-room.component.html
+++ b/src/app/chat/containers/chat-room/chat-room.component.html
@@ -1,3 +1,5 @@
+<p-progressSpinner *ngIf="isBusy$ | async"></p-progressSpinner>
+
 <eb-clear-history
 [isNothingToClear]="noMessagesInChatRoom"
 (clear)="clearChatHistory()"></eb-clear-history>
