--- a/src/app/chat/containers/chat-room/chat-room.component.html
+++ b/src/app/chat/containers/chat-room/chat-room.component.html
@@ -1,3 +1,4 @@
+<header>Chat</header>
 <eb-clear-history
 [isNothingToClear]="noMessagesInChatRoom"
 (clear)="clearChatHistory()"></eb-clear-history>
