chat: use selectors

--- a/src/app/chat/components/publish-message/publish-message.component.html
+++ b/src/app/chat/components/publish-message/publish-message.component.html
@@ -1,5 +1,6 @@
 <textarea
   [formControl]="messageField"
+  (keydown.meta.enter)="emitMessage(emitMessage)"
   pInputTextarea
   autoResize="autoResize"></textarea>
 <button
