store: introduce router-store

--- a/src/app/chat/components/message-card/message-card.component.html
+++ b/src/app/chat/components/message-card/message-card.component.html
@@ -2,4 +2,5 @@
   [header]="message.writtenBy"
   [subheader]="message.writtenAt | date:'dd. MMMM HH:mm'">
   {{ message.text }}
+  <a [routerLink]="['/message', message.guid]">Details</a>
 </p-card>
